--- a/dossier.css
+++ b/dossier.css
@@ -35,7 +35,7 @@ margin-bottom: 15px;
 }
 .container2{
 display: flex;
-/* justify-content: space-between; */
+justify-content: space-between;
 
 border: 1px #2AB3B1;
 
