--- a/blueeasy.css
+++ b/blueeasy.css
@@ -1,9 +1,13 @@
 .partie1{
     background: white;
-    width: 100%;
+    width: 84%;
     /* border: 1px  solid black; */
     font-family: 'Segoe UI','sans serif';
     padding-bottom: 20px;
+    padding-left: 260px;
+    padding-top: 40px;
+    padding-bottom: 100px;
+   
 
 
 }
@@ -12,16 +16,20 @@
 .ALL1{
 display: flex;
 justify-content: space-around;
-float: right;
+/* float: right; */
+padding-left:31.5% ;
 width : 700px;
-padding-top: 25px;
+padding-top: -25px;
+padding-bottom: 50px;
 
 }
 .Portfolio{
-margin-top: 100px;
-margin-left: 25px;
+/* margin-top: 100px; */
+margin-left: 5px;
 border-bottom: 1px solid black;
 width: 18px;
+padding-top: -200px;
+
 
 }
 
@@ -53,65 +61,64 @@ padding: 1px;
 .images{
     
 display: flex;
-flex-flow:wrap ;
-padding-left: 25px;
-padding-top: 90px;
-
+flex-wrap:wrap;
+/* padding-left: 25px;
+padding-top: 90px; */
+width: 84%;
+justify-content: space-around;
+margin-left: -10px;
+padding-top: 30px;
 }
 
 .img1{
-margin-right: 50px;
-width: 250px;
+    margin-top: -30px;
+
 
 }
 
 .img2{
-margin-right: 50px;
-width: 250px;
+    margin-top: -30px;
 
 
 }
 .img3{
-    margin-right: 50px;
-    width: 250px;
+    margin-top: -30px;
+   
 
 
 }
 .img4{
+    margin-top: -30px;
     
-    width: 250px;
-
+    
 
 
 
 }
 .img5{
-    margin-right: 50px;
-    width: 250px;
-    margin-top:20px;
+    margin-top:40px;
+  
 
 }
 
 .img6{
-    margin-right: 50px;
-    width: 250px;
-    margin-top:20px;
+    margin-top:40px;
+
 
 
 }
 
 .img7{
-    margin-right: 50px;
-    width: 250px;
-    margin-top:20px;
+    margin-top:40px;
+
 
 
 }
 .img8{
+    margin-top:40px;
   
-    width: 250px;
-    margin-top:20px;
-}
+  
+     }
 
 .justcase{
     background: #515F67;
@@ -157,7 +164,7 @@ font-size: 17px;
 
 .twitter{
     background: #4BCAFF;
-    width: 100%;
+    width: 130%;
      border-bottom: 1px  solid black;
     font-family: 'Segoe UI', 'sans serif';
     color: white;
